--- a/vs code workstation /learningDevops/force-app/main/default/classes/AccountContoller.cls
+++ b/vs code workstation /learningDevops/force-app/main/default/classes/AccountContoller.cls
@@ -1,5 +1,6 @@
 public with sharing class AccountContoller {
     public AccountContoller() {
         System.debug('Hello Chandrika');
+        System.debug('Hello Chandrika');
     }
 }
