--- a/vs code workstation /learningDevops/force-app/main/default/classes/AccountContoller.cls
+++ b/vs code workstation /learningDevops/force-app/main/default/classes/AccountContoller.cls
@@ -2,5 +2,7 @@ public with sharing class AccountContoller {
     public AccountContoller() {
         System.debug('Hello Chandrika');
         System.debug('Hello Chandrika');
+        System.debug('Hello all');
+
     }
 }
